<resources>
    <string name="app_name">Classcat CL</string>
    <string name="mpesa">mpesa</string>
    <string name="add">add</string>
    <string name="subtract">Subtract</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="answer">Answer</string>
    <string name="email">EMAIL</string>
    <string name="sms">SMS</string>
    <string name="camera">CAMERA</string>
    <string name="call">CALL</string>
    <string name="calculator">calculator</string>
    <string name="web">web</string>
    <string name="intents">intents</string>
</resources>